--- a/site/index.html
+++ b/site/index.html
@@ -8,5 +8,11 @@
    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+   <header>
+      <h1>Ten Principles for Good Design</h1>
+      <h2>by <span>Dieter Rams</span></h2>
+   </header>
+   <main></main>
+   <footer></footer>
 </body>
 </html>
