--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,9 @@
       <h1>Ten Principles for Good Design</h1>
       <h2>by <span>Dieter Rams</span></h2>
    </header>
-   <main></main>
+   <main>
+      <img src="/site/img/asset-1.png" alt="squares">
+   </main>
    <footer></footer>
 </body>
 </html>
