--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,7 @@
       <h2>by <span>Dieter Rams</span></h2>
    </header>
    <main>
-      <img src="/img/asset-1.png" alt="squares">
+      <img src="/site/img/asset-1.png" alt="squares"/>
    </main>
    <footer></footer>
 </body>
