grid copy paste

--- a/site/index.html
+++ b/site/index.html
@@ -16,6 +16,15 @@
       <img src="img/asset-1.png" alt="squares" id="squares"/>
 
    </main>
-   <footer></footer>
+   <footer>
+   <div class="wrapper">
+     <div class="one">One</div>
+     <div class="two">Two</div>
+     <div class="three">Three</div>
+     <div class="four">Four</div>
+     <div class="five">Five</div>
+     <div class="six">Six</div>
+   </div>
+   </footer>
 </body>
 </html>
