--- a/site/index.html
+++ b/site/index.html
@@ -13,10 +13,6 @@
       <h2>by <span>Dieter Rams</span></h2>
    </header>
    <main>
-      <img src="img/asset-1.png" alt="squares" id="squares"/>
-
-   </main>
-   <footer>
    <div class="wrapper">
      <div class="one">One</div>
      <div class="two">Two</div>
@@ -24,7 +20,13 @@
      <div class="four">Four</div>
      <div class="five">Five</div>
      <div class="six">Six</div>
+     <div class="seven">Seven</div>
+     <div class="eight">Eight</div>
+     <div class="nine">Nine</div>
+     <div class="ten">Ten</div>
    </div>
+</main>
+   <footer>
    </footer>
 </body>
 </html>
