--- a/site/index.html
+++ b/site/index.html
@@ -19,12 +19,14 @@
      <div class="three">Three</div>
      <div class="four">Four</div>
      <div class="five">Five</div>
-     <div class="six">Six</div>
+   </div>
+   <div class="wrapper-2">
+      <div class="six">Six</div>
      <div class="seven">Seven</div>
      <div class="eight">Eight</div>
      <div class="nine">Nine</div>
      <div class="ten">Ten</div>
-   </div>
+  </div>
 </main>
    <footer>
    </footer>
