--- a/site/index.html
+++ b/site/index.html
@@ -13,17 +13,17 @@
       <h2>by <span>Dieter Rams</span></h2>
    </header>
    <main>
-   <div class="wrapper">
-     <div class="one">One</div>
-     <div class="two">Two</div>
-     <div class="three">Three</div>
-     <div class="four">Four</div>
-     <div class="five">Five</div>
-      <div class="six">Six</div>
-     <div class="seven">Seven</div>
-     <div class="eight">Eight</div>
-     <div class="nine">Nine</div>
-     <div class="ten">Ten</div>
+   <div class="wrapper"><link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+     <div class="one">1</div>
+     <div class="two">2</div>
+     <div class="three">3</div>
+     <div class="four">4</div>
+     <div class="five">5</div>
+      <div class="six">6</div>
+     <div class="seven">7</div>
+     <div class="eight">8</div>
+     <div class="nine">9</div>
+     <div class="ten">10</div>
 </div>
 </main>
    <footer>
