--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
    </header>
    <main>
    <div class="wrapper"><link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-     <div class="one">1</div>
+     <div class="one"><img src="./img/1x/1.png" alt='1'></div>
      <div class="two">2</div>
      <div class="three">3</div>
      <div class="four">4</div>
