--- a/site/index.html
+++ b/site/index.html
@@ -14,8 +14,9 @@
    </header>
    <main>
    <div class="wrapper"><link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-     <div class="one">1</div>
+     <div class="one">1
      <p>Is innovative. The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
+  </div>
      <div class="two">2</div>
      <div class="three">3</div>
      <div class="four">4</div>
