--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
    <main>
 
    <div class="wrapper"><link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-     <div class="one">1</div>
+     <div class="one">bleep bloop blah blah blah cool cool cool</div>
      <div class="two">2</div>
      <div class="three">3</div>
      <div class="four">4</div>
