--- a/site/index.html
+++ b/site/index.html
@@ -15,16 +15,28 @@
    <main>
 
    <div class="wrapper"><link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-     <div class="one">bleep bloop blah blah blah cool cool cool</div>
+     <div class="one">1</div>
+     <div class="p-1">Is innovative. The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</div>
      <div class="two">2</div>
+     <div class="p-2">Makes a product useful. A product is bought to be used. It has to satisfy not only functional, but also psychological and aesthetic criteria. Good design emphasizes the usefulness of a product whilst disregarding anything that could detract from it.</div>
      <div class="three">3</div>
+     <div class="p-3">Is aesthetic. The aesthetic quality of a product is integral to its usefulness because products are used every day and have an effect on people and their well-being. Only well-executed objects can be beautiful.</div>
      <div class="four">4</div>
+     <div class="p-4">Makes a product understandable. It clarifies the product’s structure. Better still, it can make the product clearly express its function by making use of the user’s intuition. At best, it is self-explanatory.</div>
      <div class="five">5</div>
+     <div class="p-5">Is unobtrusive. Products fulfilling a purpose are like tools. They are neither decorative objects nor works of art. Their design should therefore be both neutral and restrained, to leave room for the user’s self-expression.</div>
       <div class="six">6</div>
+      <div class="p-6">
+Is honest. It does not make a product appear more innovative, powerful or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.</div>
      <div class="seven">7</div>
+     <div class="p-7">Is long-lasting. It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.</div>
      <div class="eight">8</div>
+     <div class="p-8">Is thorough down to the last detail. Nothing must be arbitrary or left to chance. Care and accuracy in the design process show respect towards the consumer.</div>
      <div class="nine">9</div>
+     <div class="p-9">Is environmentally friendly. Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.</div>
      <div class="ten">10</div>
+       <div class="p-10">Is as little design as possible. Less, but better — because it concentrates on the essential aspects, and the products are not burdened with non-essentials. Back to purity, back to simplicity.
+</div>
 </div>
 
 </main>
