--- a/site/index.html
+++ b/site/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
    <header>
-      <h1>Ten Principles for Good Design<link href="https://fonts.googleapis.com/css?family=Hanalei+Fill" rel="stylesheet"></h1>
+      <h1>Ten Principles for Good Design<link href="https://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet"></h1>
       <h2>by <span>Dieter Rams</span></h2>
    </header>
    <main>
 
-   <div class="wrapper"><link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+   <div class="wrapper"><link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
      <div class="one">1</div>
      <div class="p-1">Is innovative. The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</div>
      <div class="two">2</div>
