--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header>
-      <h1>10 Principles for Good Design<link href="https://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet"></h1>
+      <h1>Ten Principles for Good Design<link href="https://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet"></h1>
       <h2>by <span>Dieter Rams</span></h2>
    </header>
    <main>
