--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
 <body>
    <header>
       <h1>Ten Principles for Good Design<link href="https://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet"></h1>
-      <h2>by <span>Dieter Rams</span></h2>
+      <h2><span>Dieter Rams</span></h2>
    </header>
    <main>
 
