--- a/site/index.html
+++ b/site/index.html
@@ -12,6 +12,7 @@
       <h1>Ten Principles for Good Design<link href="https://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet"></h1>
       <h2><span>Dieter Rams</span></h2>
    </header>
+   <h3>Good Design Is...</h3>
    <main>
 
    <div class="wrapper"><link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
