--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,6 @@
       <h1>Ten Principles for Good Design<link href="https://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet"></h1>
       <h2><span>Dieter Rams</span></h2>
 
-   <h3>Good Design...</h3>
 
 </header>
    <main>
@@ -44,7 +43,7 @@ Is honest. It does not make a product appear more innovative, powerful or valuab
 </div>
 
 </main>
-   <footer>
+   <footer><h3>Good Design...</h3>
    </footer>
 </body>
 </html>
